@startuml

class Book {
    - id : int
    - title : str
    - author : str
    - available : bool
    + borrow()
    + return_book()
}

class User {
    - id : int
    - name : str
}

class Loan {
    - book : Book
    - user : User
    + create_loan()
    + close_loan()
}

class Library {
    - books : list
    - users : list
    - loans : list
    + add_book()
    + remove_book()
    + add_user()
    + borrow_book()
    + return_book()
    + display_status()
}

Library "1" --> "*" Book
Library "1" --> "*" User
Library "1" --> "*" Loan
Loan "*" --> "1" Book
Loan "*" --> "1" User

@enduml
